Avoided jumping as the homepage loads

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -223,6 +223,7 @@ a:hover {
 	&-img {
 		background-size: cover;
 		background-position: 50% 50%;
+		background-repeat: no-repeat;
 
 		&-inset {
 			box-shadow: inset 0 0 5px rgba(#000,0.1);
@@ -383,40 +384,37 @@ section.section {
 }
 
 .section-product {
-	@include padSection(90px, 90px);
+	@include padSection(120px, 90px);
 	text-align: center;
 
-	.product_logo {
-		text-align: center;
-		margin: 20px auto 20px auto;
-
-		img {
-			width: 260px;
-			max-width: 100%;
-			margin-bottom: 10px;
-		}
-
-		p {
-			@extend %altFont;
-			font-size: 14pt;
-			color: $gray-light;
-		}
+	.productLogo {
+		margin: 0 auto 50px auto;
 	}
 
-// Preview of the service, as displayed on the homepage
-	.product_services {
-		margin: 10px 0;
-		> h3 {
-			// color: $brand-primary;
-			margin-bottom: 15px;
-			color: $gray-light;
-		}
+	// Preview of the service, as displayed on the homepage
+	.product_heading {
+		margin-bottom: 10px;
+		color: $gray-light;
+	}
+}
+
+
+.productLogo {
+	margin: 0 auto;
+	width: 260px;
+	height: 200px;
+	position: relative;
+
+	.layer-img {
+		background-size: contain;
 	}
 }
 
 // Below the logo
 .tagline {
 	@extend %altFont;
+	font-size: 14pt;
+	color: $gray-light;
 }
 
 
